[theme] balance wrap for headings | fix #84

--- a/src/blades.standalone.theme.css
+++ b/src/blades.standalone.theme.css
@@ -45,6 +45,14 @@ a {
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
 h1 {
   font-size: 2.5em; /* for pico.css & tw-typography */
   margin-bottom: 1rem; /* for tw-typography */
